# flex-prompt

./: .gitignore  README.md  __init__.py  bounds.py  example.py  pyproject.toml  renderable.py  replay.py  requirements.txt  setup.py
doc/: intro_to_flex_prompt.ipynb  introduction.ipynb
flex-prompt/: test_helpers.py
flex-prompt/renderer/: renderer.py
flex_prompt/: test_flex.py  test_helpers.py  test_render.py
flex_prompt/renderer/: rendering.py
flexprompt/: __init__.py  __main__.py  bounds.py  cat.py  flex.py  test_flex.py  test_helpers.py  test_render.py
flexprompt/renderer/: __init__.py  context.py  langchain_openai.py  renderer.py  rendering.py
flexprompt/snapshots/: snap_test_render.py
renderer/: renderer.py  test_renderer.py
renderer/snapshots/: snap_test_renderer.py
src/flex_prompt/: __init__.py  __main__.py  cat.py  context.py  expect.py  find_target.py  flex.py  render.py  rendering.py  target.py  test_render.py
src/flex_prompt/renderer/: context.py  langchain_openai.py  renderer.py  rendering.py
src/flex_prompt/snapshots/: snap_test_render.py
src/flex_prompt/targets/: __init__.py  langchain_openai.py  openai.py  testing.py
src/test_helpers/: __init__.py
tests/: test_cat.py  test_context.py  test_flex.py  test_langchain.py  test_openai.py  test_render.py
tests/snapshots/: snap_test_flex.py  snap_test_render.py
