[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath='src'
addopts = [
    "--import-mode=importlib",
]

[project]
name = "flex-prompt"
version = "0.0.1"
authors = [
  { name="ashi", email="i@ashi.io" },
]
description = "a flexible LLM prompt renderer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/queerviolet/flex-prompt"
Issues = "https://github.com/queerviolet/flex-prompt/issues"

[project.optional-dependencies]
openai = ["tiktoken"]